[package]
name = "rusty_kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc = "3.0.1"

[lib]
name = "librustykv"
path = "src/lib.rs"

[[bin]]
name = "rkv_mem"
path = "src/rkv_mem.rs"